feat: :construction: Add basic html structure

--- a/index.html
+++ b/index.html
@@ -1,12 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=screen-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Food</title>
 </head>
 <body>
-    
+    <header>
+        <div class="icon">
+            <h1>Foods</h1>
+        </div>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <i class='bx bx-menu'></i>
+    </header>
+    <section id="home" class="land">
+        <main>
+            <article>
+                <h2> Full Website</h2>
+                <p>Foods the Most precious thing</p>
+                <br>
+                <button>Today's Menu</button>
+            </article>
+            <div class="home-img">
+                <img src="storage/img/home.png" alt="home">
+            </div>
+        </main>
+    </section>
+    <section id="about" class="about">
+        <main>
+            <div class="about-img">
+                <img src="storage/img/about.png" alt="about">
+            </div>
+            <article>
+                <h3>About Us</h3>
+                <h2> We speak the good
+                    food language</h2>
+                <p>It is a long established fact that a
+                    be distracted by the readable content
+                    looking at its layout. The point of</p>
+                <button>Learn More</button>
+            </article>
+        </main>
+    </section>
+    <section id="menu" class="menu">
+        <main>
+            <h3>food menu</h3>
+            <h2>Fres taste and grat price</h2>
+            <section class="menu-grid">
+                <div class="food-item">
+                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-img"><img src="./storage/img/food1.png" alt=""></div>
+                    <h5>chiken burguer</h5>
+                    <h6>tasty food</h6>
+                    <p>$11.00</p>
+                </div>
+                <div class="food-item">
+                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-img"><img src="./storage/img/food2.png" alt=""></div>
+                    <h5>special beef burguer</h5>
+                    <h6>tasty food</h6>
+                    <p>$11.00</p>
+                </div>
+                <div class="food-item">
+                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-img"><img src="./storage/img/food3.png" alt=""></div>
+                    <h5>chiken fry pack</h5>
+                    <h6>tasty food</h6>
+                    <p>$11.00</p>
+                </div>
+            </section>
+        </main>
+    </section>
+    <section id="services" class="services">
+        <main>
+            <h3>services</h3>
+            <h2>We provide best food services</h2>
+            <section class="service-grid">
+                <div class="service-item">
+                    <div class="service-item-img"><img src="./storage/img/s1.png" alt=""></div>
+                    <h3>Order</h3>
+                    <p>It is a long established
+                        be distracted by the readable
+                        looking at its layout. </p>
+                </div>
+                <div class="service-item">
+                    <div class="service-item-img"><img src="./storage/img/s2.png" alt=""></div>
+                    <h3>Shipping</h3>
+                    <p>It is a long established
+                        be distracted by the readable
+                        looking at its layout. </p>
+                </div>
+                <div class="service-item">
+                    <div class="service-item-img"><img src="./storage/img/s3.png" alt=""></div>
+                    <h3>Delivered</h3>
+                    <p>It is a long established
+                        be distracted by the readable
+                        looking at its layout. </p>
+                </div>
+            </section>
+        </main>
+    </section>
+    <section id="contact" class="banner">
+        <main>
+            <section class="banner-item">
+                <h2> We make quality food Everyday</h2>
+                <button>learn more</button>
+            </section>
+        </main>
+    </section>
+    <footer>
+        <div class="footer-item">
+            <h3>menu Links</h3>
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>menu</li>
+                <li>service</li>
+                <li>contact</li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h3>our Service</h3>
+            <ul>
+                <li>web desing</li>
+                <li>web develoment</li>
+                <li>marketing</li>
+                <li>product management</li>
+                <li>graphic desing</li>
+            </ul>
+        </div>
+        <div class="footer-item">
+            <h3>information</h3>
+            <ul>
+                <li>About us</li>
+                <li>delivery information</li>
+                <li>privacy policy</li>
+                <li>term & conditions</li>
+            </ul>
+        </div>
+        <div class="footer-media">
+            <h4>contact Us</h4>
+            <ul>
+                <li><i class="bx bxl-instagram"></i></li>
+                <li><i class="bx bxl-instagram"></i></li>
+                <li><i class="bx bxl-instagram"></i></li>
+                <li><i class="bx bxl-instagram"></i></li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
