feat: :construction: Add div into food item
fix typos and other things

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Food</title>
 </head>
+
 <body>
     <header>
         <div class="icon">
@@ -53,25 +54,36 @@
     </section>
     <section id="menu" class="menu">
         <main>
-            <h3>food menu</h3>
-            <h2>Fres taste and grat price</h2>
+            <section class="menu-head">
+                <h3>food menu</h3>
+                <h2>Fresh taste and grat price</h2>
+            </section>
             <section class="menu-grid">
                 <div class="food-item">
-                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-close">
+                        <span></span>
+                        <i class="bx bx-x"></i>
+                    </div>
                     <div class="food-item-img"><img src="./storage/img/food1.png" alt=""></div>
                     <h5>chiken burguer</h5>
                     <h6>tasty food</h6>
                     <p>$11.00</p>
                 </div>
                 <div class="food-item">
-                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-close">
+                        <span></span>
+                        <i class="bx bx-x"></i>
+                    </div>
                     <div class="food-item-img"><img src="./storage/img/food2.png" alt=""></div>
                     <h5>special beef burguer</h5>
                     <h6>tasty food</h6>
                     <p>$11.00</p>
                 </div>
                 <div class="food-item">
-                    <i class="bx bxs-sushi"></i>
+                    <div class="food-item-close">
+                        <span></span>
+                        <i class="bx bx-x"></i>
+                    </div>
                     <div class="food-item-img"><img src="./storage/img/food3.png" alt=""></div>
                     <h5>chiken fry pack</h5>
                     <h6>tasty food</h6>
