--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <i id="burger-ico" class='bx bx-menu'></i>
+        <label for="menu-toggle" class="burger-ico">
+            <i id="burger-ico" class='bx bx-menu'></i>
+        </label>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <nav class="burger-menu">
+            <a href="">home</a>
+            <a href="">About</a>
+            <a href="">Menu</a>
+            <a href="">services</a>
+            <a href="">Contact</a>
+        </nav>
     </header>
     <section id="home" class="land">
         <main>
