feat: :sparkles: Add refs to sections

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </label>
         <input type="checkbox" id="menu-toggle" class="menu-toggle" />
         <nav class="burger-menu">
-            <a href="">home</a>
-            <a href="">About</a>
-            <a href="">Menu</a>
-            <a href="">services</a>
-            <a href="">Contact</a>
+            <a href="#home">home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#services">services</a>
+            <a href="#fo">Contact</a>
         </nav>
     </header>
     <section id="home" class="land">
@@ -146,14 +146,14 @@
             <div class="footer-item">
                 <p>menu Links</p>
                 <ul>
-                    <li><a href="">home</a></li>
-                    <li><a href="">about</a></li>
-                    <li><a href="">menu</a></li>
-                    <li><a href="">services</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="#home">home</a></li>
+                    <li><a href="#about">about</a></li>
+                    <li><a href="#menu">menu</a></li>
+                    <li><a href="#services">services</a></li>
+                    <li><a href="#fo">contact</a></li>
                 </ul>
             </div>
-            <div class="footer-item">
+            <div id="fo" class="footer-item">
                 <p>our Service</p>
                 <ul>
                     <li><a href="">web desing</a></li>
