feat: :construction: Restructure html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/app.js" type="module" defer=""></script>   
+    <script src="./js/app.js" type="module" defer=""></script>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap')
+    </style>
 </head>
+
 <body>
-    
-</body>
+
+    <section class="container">
+        <nav class="sidebar">
+            <h3>CampusShop</h3>
+            <ul tabindex="1">
+                <li tabindex="1" id="all"><a id="all" href="#">Todos los productos</a></li>
+                <li tabindex="1" id="coats"><a id="coats" href="#">Abrigos</a></li>
+                <li tabindex="1" id="shirts"><a id="shirts" href="#">Camisetas</a></li>
+                <li tabindex="1" id="pants"><a id="pants" href="#">Pantalones</a></li>
+                <li tabindex="1" id="car"><a id="car" href="#">Carrito <span class="cart-count">3</span></a></li>
+            </ul>
+            <h4>© 2024 Camper</h4>
+        </nav>
+        <main class="main-content">
+            <h2 id="view">Todos los productos</h2>
+            <div class="product-grid" id="product-grid"> 
+                <!--<div class="product-item">
+                    <div class="product-img"><img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt=""></div>
+                    <section class="product-info">
+                        <h3>Camiseta 02</h3>
+                        <div class"info-foo">
+                        <p>$1.500</p>
+                        <button>Agregar</button>
+                        </div>
+                    </section>
+                </div> --> 
+            </div>
+        </main>
+    </section>
+    <body>
 </html>
