feat: :construction: Add template components

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CampusShop</title>
     <script src="./js/app.js" type="module" defer=""></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap')
+        @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
     </style>
 </head>
 
@@ -30,7 +30,7 @@
         </nav>
         <main class="main-content">
             <h2 id="view">Todos los productos</h2>
-            <div class="product-grid" id="product-grid">
+            <div id="product-grid">
                 <!--<div class="product-item">
                     <div class="product-img"><img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt=""></div>
                     <section class="product-info">
@@ -42,13 +42,33 @@
                     </section>
                 </div> -->
 
+                <!-- <div class="car-item">
+                    <div class="car-img"><img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt=""></div>
+                    <div class="car-item-name">
+                        <h6>Nombre</h6>
+                        <p id="car-item-name">Pantalon1</p>
+                    </div>
+                    <div class="car-item-quantity">
+                        <h6>Cantidad</h6>
+                        <p id="car-item-quantity">2</p>
+                    </div>
+                    <div class="car-item-price">
+                        <h6>Precio</h6>
+                        <p id="car-item-price">$ 100</p>
+                    </div>
+                    <div class="car-item-subtotal">
+                        <h6>Subtotal</h6>
+                        <p id="car-item-subtotal"> $ 200</p>
+                    </div>
+                    <i class='bx bxs-trash'></i>
+                </div> -->
             </div>
             
             <div class="car-manager" id="car-manager">
                 <button id="empty-car">vaciar carrito</button>
                 <div class="car-total">
                     <p>Total $ 8.500</p>
-                    <button id="empty-car">comprar ahora</button>
+                    <button id="shop-car">comprar ahora</button>
                 </div>
             </div>
         </main>
