feat: :sparkles: Finish  html structural refactors

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="car-manager" id="car-manager">
                 <button id="empty-car">vaciar carrito</button>
                 <div class="car-total">
-                    <p>Total $ 8.500</p>
+                    <p id="total">Total $ 0</p>
                     <button id="shop-car">comprar ahora</button>
                 </div>
             </div>
