fix: :ambulance: Fix barely overflow

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <nav class="sidebar">
             <h3>CampusShop</h3>
             <ul tabindex="1">
-                <li tabindex="1" id="all"><a id="all" href="#"><i class='bx bx-store'></i> Todos los productos</a></li>
-                <li tabindex="1" id="coats"><a id="coats" href="#"><i class='bx bx-cloud-snow'></i> Abrigos</a></li>
-                <li tabindex="1" id="shirts"><a id="shirts" href="#"><i class='bx bxs-t-shirt'></i> Camisetas</a></li>
-                <li tabindex="1" id="pants"><a id="pants" href="#"><i class='bx bx-closet'></i> Pantalones</a></li>
-                <li tabindex="1" id="car"><a id="car" href="#"><i class='bx bxs-shopping-bag'></i> Carrito <span
+                <li tabindex="1" id="all"><a id="all" href="#"><i class='bx bx-store'></i> <span class="text-menu">Todos los productos</span> </a></li>
+                <li tabindex="1" id="coats"><a id="coats" href="#"><i class='bx bx-cloud-snow'></i> <span class="text-menu">Abrigos</span></a></li>
+                <li tabindex="1" id="shirts"><a id="shirts" href="#"><i class='bx bxs-t-shirt'></i> <span class="text-menu">Camisetas</span></a></li>
+                <li tabindex="1" id="pants"><a id="pants" href="#"><i class='bx bx-closet'></i> <span class="text-menu">Pantalones</span></a></li>
+                <li tabindex="1" id="car"><a id="car" href="#"><i class='bx bxs-shopping-bag'></i> <span class="text-menu">Carrito</span><span
                             class="cart-count" id="cart-count">0</span></a></li>
             </ul>
             <h4>© 2024 Camper</h4>
